--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,14 @@
- 
+DATABASE_URL="postgresql://user:password@localhost:5432/dbname"
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="your-secret-key"
+
+# OAuth providers
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
+
+# Email provider
+EMAIL_SERVER_USER=""
+EMAIL_SERVER_PASSWORD=""
+EMAIL_SERVER_HOST=""
+EMAIL_SERVER_PORT=""
+EMAIL_FROM="" 
