--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
 		"seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
 	},
 	"dependencies": {
-		"@auth/prisma-adapter": "^2.7.4",
+		"@auth/core": "^0.37.3",
 		"@hookform/resolvers": "^4.0.0",
+		"@next-auth/prisma-adapter": "^1.0.7",
 		"@prisma/client": "^4.16.2",
 		"@radix-ui/react-avatar": "^1.1.3",
 		"@radix-ui/react-dialog": "^1.1.6",
@@ -43,6 +44,8 @@
 		"@types/react": "^18.2.61",
 		"@types/react-dom": "^18.2.19",
 		"autoprefixer": "^10.4.16",
+		"eslint": "9.20.1",
+		"eslint-config-next": "15.1.7",
 		"postcss": "^8.4.31",
 		"prisma": "^4.16.2",
 		"tailwindcss": "^3.3.0",
