--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"next-auth": "^4.24.11",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-dropzone": "^14.3.5",
 		"react-hook-form": "7.51.0",
 		"tailwind-merge": "^3.0.1",
 		"tailwindcss-animate": "^1.0.7",
